<resources>
    <string name="app_name">RideShare</string>
    <string name="RSWelcome">Welcome to RideShare!</string>
    <string name="RSPlease_sign_in">Please sign in to continue.</string>
    <string name="RSNew_user_button">New User</string>
    <string name="RSSign_in_phone_number_button">Phone Number</string>
    <string name="RSLog_in_password_hint">Password</string>
    <string name="RSsign_in_button">Sign In</string>
    <string name="RSuser_information">Please provide the following user information:</string>
    <string name="RSnext_page">Next</string>
    <string name="RSuser_info_first_name">First Name</string>
    <string name="RSuser_info_last_name">Last Name</string>
    <string name="RS_user_info_phone_number">Phone Number</string>
    <string name="RSuser_info_password">Password</string>
    <string name="RSuser_info_street_address">Street Address</string>
    <string name="RSuser_info_city">City</string>
    <string name="RSuser_info_state">State</string>
    <string name="RSuser_info_zip">Zip</string>
    <string name="RSvehicle_information">Enter the following vehicle information:</string>
    <string name="RSvehicle_year">Vehicle Year</string>
    <string name="RSvehicle_make">Vehicle Make</string>
    <string name="RSvehicle_model">Vehicle Model</string>
    <string name="RSvehicle_color">Vehicle Color</string>
    <string name="RSvehicle_doors">2 or 4 Doors?</string>
    <string name="RSpassenger_seats"># of Passenger Seats</string>
    <string name="RSvehicle_information_finish">Finish</string>
    <string name="RSchoose_action">What would you like to do?</string>
    <string name="RScreate_new_ride_button">Create a new ride</string>
    <string name="RSfind_a_ride_button">Find a new ride</string>
    <string name="RSview_ride_info">View my ride information</string>
    <string name="RSupdate_information">Update my user and vehicle information</string>
    <string name="RSenter_ride_information">Enter the following ride information:</string>
    <string name="RSdate_format">mm/dd/yyyy</string>
    <string name="RStime_format">hh:mm</string>
    <string name="RScreate_ride_date">Enter the date of the ride:</string>
    <string name="RScreate_ride_arrival_time">Enter the destination arrival time:</string>
    <string name="RScreate_ride_maxium_passengers">Enter the maximum number of passengers:</string>
    <string name="RSmaximum_passengers">Maximum Passengers</string>
    <string name="RScreate_ride_create_button">Create!</string>
    <string name="RSdestination">Destination</string>
    <string name="RSenter_destination">Enter destination:</string>
    <string name="destination">Destination</string>
    <string name="RSbetween_the_times">Between the times:</string>
    <string name="RSearliest_time">Earliest time</string>
    <string name="RSfindbutton">Find!</string>
    <string name="RSlatest_time">Latest time</string>
    <string name="RSsearch_failed">Sorry, but there are no rides that mach your search criteria.</string>
    <string name="RSrides_are_available">The following rides are available:</string>
    <string name="RSride_details">Ride details:</string>
    <string name="RSsign_up_for_ride">Sign up for this ride.</string>
    <string name="RSsigned_up_for_ride">You have been signed up for this ride.</string>
    <string name="RSride_date">Ride Date</string>
    <string name="RSdone_button">Done</string>
    <string name="RSyear">Year</string>
    <string name="RSmake">Make</string>
    <string name="RSdrivers_information">The drivers information:</string>
    <string name="RSmodel">Model</string>
    <string name="RScolor">Color</string>
    <string name="RSarrival_time">Arrival Time</string>
    <string name="RSlast_name">Last Name</string>
    <string name="RSfirst_name">First Name</string>
    <string name="RSthe_driver_is">The Driver is:</string>
    <string name="RSthe_number_of_available_seats">The number of available seats:</string>
    <string name="RSnumber_of_seats_remaining">Number of seats remaining</string>
    <string name="RSpassengers">Passengers:</string>
    <string name="RSpassenger_2_first_name">Passenger 2 First Name</string>
    <string name="RSpassenger_2_last_name">Passenger 2 Last Name</string>
    <string name="RSpassenger_1_last_name">Passenger 1 Last Name</string>
    <string name="RSpassenger_3_first_name">Passenger 3 First Name</string>
    <string name="RSpassenger_3_last_name">Passenger 3 Last Name</string>
    <string name="RSremove_button">Remove</string>
    <string name="RSpassenger_1_first_name">Passenger 1 First Name</string>
    <string name="RSrider_information_for">Rider information for:</string>
    <string name="RSinfo">Info</string>
    <string name="RSphone_number">Phone Number</string>
    <string name="RSaddress">Address</string>
    <string name="RSmy_ride_information">My ride information:</string>
    <string name="RSdriver_s_information">Driver\'s information:</string>
    <string name="RSdriver_s_first_name">Driver\'s First Name</string>
    <string name="RSdriver_s_last_name">Driver\'s Last Name</string>
    <string name="RSname">Name</string>
    <string name="RSpassenger_1_name">Passenger 1 Name</string>
    <string name="RSpassenger_2_name">Passenger 2 Name</string>
    <string name="RSpassenger_3_name">Passenger 3 Name</string>
</resources>
